--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,13 @@ description: Documenting my semester studying abroad
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
+  Blog: "https://mackenziehlee.github.io/"
+  Search: "https://mackenziehlee.github.io/Search"
   Resources:
+    - Blog: "https://mackenziehlee.github.io/"
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
-  
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -122,7 +124,7 @@ google_analytics: "UA-124365325-1"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-# disqus: ""
+disqus: "mackenziehlee"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
