--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,8 @@ description: Documenting my semester studying abroad
 navbar-links:
   About Me: "aboutme"
   Blog: "https://mackenziehlee.github.io/"
-  Search: "https://mackenziehlee.github.io/Search"
-  Resources:
-    - Blog: "https://mackenziehlee.github.io/"
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+  Search: "search"
+  
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
