--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: Documenting my semester studying abroad
 navbar-links:
   About Me: "aboutme"
   Blog: "https://mackenziehlee.github.io/"
-  Search: "search"
+  Search: "https://mackenziehlee.github.io/tags"
   
 
 # Image to show in the navigation bar - image must be a square (width = height)
